# fastapi-magic-router

./: README.md  pyproject.toml
magic_router/: __init__.py
tests/: main.py
