[tool.poetry]
name = "magic_router"
version = "0.1.0"
description = ""
authors = ["Arijit Basu <sayanarijit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastapi = "*"
black = "^22.8.0"
flake8 = "^5.0.4"
pynvim = "^0.4.3"
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
